# react-native-fast-encoder

./: CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-fast-encoder.podspec  tsconfig.json
android/: CMakeLists.txt  build.gradle  cpp-adapter.cpp  fast-encoder-adapter.cpp
android/src/main/java/com/fastencoder/: FastEncoderModule.kt  FastEncoderPackage.kt
cpp/: react-native-fast-encoder.cpp  react-native-fast-encoder.h
example/: package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/java/fastencoder/example/: MainActivity.kt  MainApplication.kt
example/ios/: Podfile
example/ios/FastEncoderExample/: AppDelegate.mm  Info.plist
example/ios/FastEncoderExample.xcodeproj/: project.pbxproj
example/src/: App.tsx
example/src/components/: Container.tsx  SectionContainer.tsx  SectionResult.tsx  SectionTitle.tsx
example/src/modules/: EncryptDecrypt.tsx
ios/: FastEncoder.h  FastEncoder.mm
src/: NativeFastEncoder.ts  index.tsx  types.d.ts
